--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
   "author": "Naim Ahmad",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.0",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.2.3"
   },
   "devDependencies": {
